# flake-templates

./: README.md  flake.nix
basic/: flake.nix
haskell-basic/: CHANGELOG.md  LICENSE  README.md  flake.nix  haskell-basic.cabal
idris2/: flake.nix
